--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "nuxt": "^2.0.0",
+    "vue-css-donut-chart": "^1.1.6",
+    "vue-feedback-reaction": "^1.1.0",
     "vue-wordcloud": "^1.1.1"
   },
   "devDependencies": {
